# HackerOS-Games

./: README.md  addons-remove.hl  addons.hl  build.hl
HackerOS-Community-Games/: list.json
addons/parkour-runner/: README.md  conf.lua  main.lua
app/: App.tsx  Cargo.toml  constants.ts  index.css  index.html  index.tsx  main.tsx  package.json  tsconfig.json  types.ts  vite.config.ts
app/components/: AddonsSection.tsx  GameCard.tsx  GamesSection.tsx  ParticlesBackground.tsx  SettingsSection.tsx  StoreSection.tsx
app/electron/: main.ts  preload.ts  tsconfig.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
bark-squadron/: App.tsx  constants.ts  electron-main.js  index.css  index.html  package.json  tsconfig.json  types.ts  vite.config.ts
bark-squadron/components/: GameCanvas.tsx  LeaderboardPanel.tsx
bark-squadron/services/: geminiService.ts  tauriService.ts
bark-squadron/src-tauri/: Cargo.toml  tauri.conf.json
bark-squadron/src-tauri/src/: lib.rs  main.rs
bit-jump/: conf.lua  main.lua
bit-jump/src/: colors.lua  conf.lua  levels.lua  levels_10_11.lua  levels_12_14.lua  levels_1_3.lua  levels_4_6.lua  levels_7_9.lua  levels_logic.lua  menu.lua  player.lua  settings.lua  utils.lua
cosmonaut/: README.md  constants.odin  helpers.odin  init.lua  init.odin  main.lua  main.odin  simulation.lua  simulation.odin  types.odin  ui_screens.lua  ui_screens.odin  ui_shared.lua  ui_shared.odin
starblaster/: Cargo.toml
the-racer/: Cargo.toml  main.odin
the-racer/src/: data.rs  main.rs  save.rs  screens.rs  simulation.rs  types.rs  ui.rs
(+29 files in other folders)
