[package]
name = "the-racer"
version = "1.0.0"
edition = "2021"
description = "The Racer - Motorsport Management Simulator"

[dependencies]
macroquad = { version = "0.4", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["std", "std_rng"] }
