[package]
name = "hackeros-games"
version = "0.7.0"
description = "HackerOS Games Launcher"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
