[package]
name = "bark-squadron"
version = "0.7.0"
description = "Bark Squadron — Physics-based dogfighting game"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "bark_squadron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bark-squadron"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
